# eject-applet

./: .gitignore  README.md  setup.cfg
src/eject_applet/: main.py
src/eject_applet/data/: help.txt
