[metadata]
name = eject-applet
version = 0.1.0
license = GPL-3
license_file = LICENSE
author = Azad Ahmadi
author_email = azadahmadi@mailo.com
description = External disks utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Akmadan23/eject-applet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    PyGObject

[options.entry_points]
console_scripts =
    eject-applet = eject_applet.main:main

[options.packages.find]
where = src
